# bare-metal

bare_machine/: Cargo.toml
bare_machine/src/: main.rs
