cargo-features = ["named-profiles"]
[package]
name = "bare_machine"
version = "0.1.0"
authors = ["fazerzinho <45016808+fazerzinho@users.noreply.github.com>"]
edition = "2018"

[profile.dev] # the profile used for `cargo build`
panic = "abort"

[profile.release] # the profile used for `cargo build --release`
panic = "abort"

[dependencies]



